--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
                 <div class="stats shadow">
                     <div class="stat">
                       <div class="stat-title">Current Amount</div>
-                      <div class="stat-value">5400</div>
+                      <div id="current-amount" class="stat-value">5400</div>
                       
                     </div>
                   </div>
@@ -36,17 +36,17 @@
                               <label class="label">
                                 <span class="label-text">Amount</span>
                               </label>
-                              <input type="text" placeholder="Amount" class="input input-bordered" required />
+                              <input id="addInput" type="text" placeholder="Amount" class="input input-bordered" required />
                             </div>
                             <div class="form-control">
                               <label class="label">
                                 <span class="label-text">Pin</span>
                               </label>
-                              <input type="password" placeholder="4 Digit Pin" class="input input-bordered" required />
+                              <input id="check-pin" type="password" placeholder="4 Digit Pin" class="input input-bordered" required />
                               
                             </div>
                             <div class="form-control mt-6">
-                              <button id="add-money" class="btn btn-primary">Add Money</button>
+                              <button id="btn-add-money" class="btn btn-primary">Add Money</button>
                             </div>
                           </form>
                       </div>
